<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
				android:orientation="vertical"
				android:layout_width="fill_parent" 
				android:layout_height="fill_parent" 
				android:scrollbars="vertical" >
				<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
 					android:id="@+id/buttonlayout"
 					android:orientation="horizontal"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:height="32dp"
 					android:gravity="left|top"
 					android:paddingTop="2dp"
 					android:paddingBottom="2dp"
 					android:background="#333" >

		<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
						android:id="@+id/buttonlayout2"
						android:orientation="horizontal"
						android:layout_height="wrap_content"
						android:gravity="left|center_vertical"
						android:layout_gravity="left"
						android:layout_width="wrap_content" >
	    	<ImageButton 	android:id="@+id/logo" 
	    					android:layout_width="32dp"
	    					android:layout_height="32dp"
	    					android:background="@drawable/icon" >
	    	</ImageButton>
	    	<TextView 	android:id="@+id/txtTest"
	    				android:layout_width="fill_parent"
	    				android:layout_height="fill_parent"
	    				android:textStyle="bold"
	    				android:text="@string/app_name"
	    				android:textColor="#FFFFFF"
	    				android:textSize="15sp"
	    				android:gravity="center_vertical"
	    				android:paddingLeft="5dp" >
	    	</TextView>
	    </LinearLayout>
		<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
						android:id="@+id/buttonlayout2" 
						android:orientation="horizontal"
						android:layout_height="wrap_content"
						android:gravity="right"
						android:layout_gravity="right"
						android:layout_width="fill_parent" >
			<Button 	android:id="@+id/home"
							android:layout_width="wrap_content"
							android:layout_height="32dp"
							android:text="@string/home" >
			</Button>
			<Button 	android:id="@+id/portfolio"
							android:layout_width="wrap_content"
							android:layout_height="32dp"
							android:text="@string/portfolio" >
			</Button>
		</LinearLayout>
	</LinearLayout>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <TextView
        android:paddingTop="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18dp"
        android:text="@string/company_name" />

    <!-- Note: android:inputType is not supported in Android 1.5 -->
    <AutoCompleteTextView
        android:layout_width="fill_parent"
        android:inputType="textNoSuggestions"
        android:layout_height="wrap_content"
        android:completionThreshold="1"
        android:id="@+id/company_name" />

    <LinearLayout
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:paddingRight="6dp"
            android:text="@string/nse_symbol" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/none"
            android:id="@+id/nse_symbol" />
    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        android:text="@string/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
</LinearLayout>