<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
 					android:id="@+id/buttonlayout"
 					android:orientation="horizontal"
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"
 					android:height="32dp"
 					android:gravity="left|top"
 					android:paddingTop="2dp"
 					android:paddingBottom="2dp"
 					android:background="#333" >

		<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
						android:id="@+id/buttonlayout2"
						android:orientation="horizontal"
						android:layout_height="wrap_content"
						android:gravity="left|center_vertical"
						android:layout_gravity="left"
						android:layout_width="wrap_content" >
	    	<ImageButton 	android:id="@+id/logo" 
	    					android:layout_width="32dp"
	    					android:layout_height="32dp"
	    					android:background="@drawable/icon" >
	    	</ImageButton>
	    	<TextView 	android:id="@+id/txtTest"
	    				android:layout_width="fill_parent"
	    				android:layout_height="fill_parent"
	    				android:textStyle="bold"
	    				android:text="@string/app_name"
	    				android:textColor="#FFFFFF"
	    				android:textSize="15sp"
	    				android:gravity="center_vertical"
	    				android:paddingLeft="5dp" >
	    	</TextView>
	    </LinearLayout>
		<LinearLayout 	xmlns:android="http://schemas.android.com/apk/res/android"
						android:id="@+id/buttonlayout2" 
						android:orientation="horizontal"
						android:layout_height="wrap_content"
						android:gravity="right"
						android:layout_gravity="right"
						android:layout_width="fill_parent" >
			<Button 	android:id="@+id/home"
							android:layout_width="wrap_content"
							android:layout_height="32dp"
							android:text="@string/home" >
			</Button>
			<Button 	android:id="@+id/portfolio"
							android:layout_width="wrap_content"
							android:layout_height="32dp"
							android:text="@string/portfolio" >
			</Button>
		</LinearLayout>
	</LinearLayout>
